--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ rvm:
 - 2.4.0
 bundler_args: --jobs=2
 script:
-  - bundle exec rake db:setup
-  - bundle exec rake spec
+  - bundle exec rails db:setup
+  - bundle exec rspec
 cache: bundler
 services:
   - postgresql
